fix overflow

--- a/pixture/style.css
+++ b/pixture/style.css
@@ -127,7 +127,8 @@ table {
 input {
   min-width: 0;
 }
-div {
+* {
+  outline: 1px solid #f00 !important;
   box-sizing: border-box;
 }
 /* ================================================================================================================== */
@@ -170,11 +171,12 @@ body {
 .heroTextWrapper {
   background: url("./public/hero-red.png") no-repeat center center;
   background-size: cover;
-  width: 100%;
+  width: calc(100% - var(--left-bar-padding) * 2);
   padding: 30px;
   position: relative;
 }
-.heroTextWrapper .title {
+.heroTextWrapper .title,
+.hero2Wrapper .title {
   font-size: 62px;
   font-weight: bold;
 }
@@ -214,8 +216,10 @@ body {
 .mobileTitle {
   margin: 40% 0 30px 0;
 }
+
 @media screen and (min-width: 768px) {
-  .heroTextWrapper .title {
+  .heroTextWrapper .title,
+  .hero2Wrapper .title {
     font-size: 132px;
     line-height: 102px;
   }
@@ -223,7 +227,7 @@ body {
     font-size: 24px;
     font-weight: bold;
     line-height: 25px;
-  
+
     margin-bottom: 10px;
   }
   .subTextWrapper .subContent {
@@ -245,7 +249,8 @@ body {
     top: 30px;
     right: 60px;
   }
-  .mobileTitle, #mobileThreeDots {
+  .mobileTitle,
+  #mobileThreeDots {
     display: none;
   }
   .heroTextWrapper {
@@ -282,7 +287,7 @@ body {
   .subTextWrapper {
     max-width: 50%;
   }
-  
+
   .desktopCornerTxt {
     font-size: 13px;
     display: block;
